WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193124
REGRESSION (
r238090
): After showing the Find banner or tab bar, hit tests are vertically offset (or painting is not offset)
https://bugs.webkit.org/show_bug.cgi?id=193124
Summary
REGRESSION (r238090): After showing the Find banner or tab bar, hit tests are...
Simon Fraser (smfr)
Reported
2019-01-03 14:28:25 PST
REGRESSION (
r238090
): After showing the Find banner or tab bar, hit tests are vertically offset (or painting is not offset)
Attachments
Patch
(2.07 KB, patch)
2019-01-03 15:05 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-01-03 15:05:11 PST
Created
attachment 358281
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-01-03 15:21:48 PST
rdar://problem/46755409
WebKit Commit Bot
Comment 3
2019-01-03 15:48:08 PST
Comment on
attachment 358281
[details]
Patch Clearing flags on attachment: 358281 Committed
r239601
: <
https://trac.webkit.org/changeset/239601
>
WebKit Commit Bot
Comment 4
2019-01-03 15:48:10 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug